kubernetes/legacy/apps/ntfy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "ntfy.k8s.local"
  rules:
    - backendRefs:
        - name: ntfy
          port: 80
